packages/llvm/src/tests/js_loop/snapshots/llvm__tests__js_loop__while_loop__    function foo() : void {        const x = 1;    }    let x = 0;    while (x !== 10) {        foo();        x += 1;    }.snap
---
source: packages/llvm/src/tests/js_loop/while_loop.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %"x|_|" = alloca double, align 8
  store double 0.000000e+00, double* %"x|_|", align 8
  br label %Block_0

Block_0:                                          ; preds = %Block_1, %entry
  %"2" = load double, double* %"x|_|", align 8
  %"1" = fcmp one double %"2", 1.000000e+01
  br i1 %"1", label %Block_1, label %Block_2

Block_1:                                          ; preds = %Block_0
  call void @"foo|_|"()
  %"5" = load double, double* %"x|_|", align 8
  %"6" = fadd double %"5", 1.000000e+00
  store double %"6", double* %"x|_|", align 8
  br label %Block_0

Block_2:                                          ; preds = %Block_0
  ret void
}

define void @"foo|_|"() {
main:
  %"x|_|" = alloca double, align 8
  store double 1.000000e+00, double* %"x|_|", align 8
}

